fixed height collapsing

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,4 +3,5 @@
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
+    min-height: 100vh;
 }
